samples/_failures_safe/1761518723_e1e24e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be2b7d29.c: In function ‘main’:
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected expression at end of input
  157 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be2b7d29.c:157:21: error: expected declaration or statement at end of input
